tests/paczka1/fuzzy1/18780097.err
Error in line 8: A357 S483 95,6
Error in line 14: SNlBdB6f S483 58,6
Error in line 18: SNlBdB6f A357 10,9
Error in line 29: A357 A357 110,7
Error in line 34: O2gWdXkoRd S275 29,7
